loopdowhile.Poucet1.scala.error
Compilation error:
Poucet1:6: error: '(' expected but identifier found.
                                      if isOverBaggle() NBag=NBag+1}
                                         ^Poucet1:6: error: illegal start of simple expression
                                      if isOverBaggle() NBag=NBag+1}
                                                                   ^